<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="5sp" >

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_title"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/dialog_fileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/dialog_title"
        android:layout_toRightOf="@id/dialog_title"
        android:textSize="13sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/dialog_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dialog_fileTitle"
        android:layout_marginTop="5sp"
        android:text="@string/dialog_size"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/dialog_fileSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/dialog_size"
        android:layout_toEndOf="@id/dialog_size"
        android:layout_toRightOf="@id/dialog_size"
        android:textSize="13sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/dialog_filePercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dialog_fileTitle"
        android:textSize="14sp"
        android:textStyle="italic" />

    <ProgressBar
        android:id="@+id/dialog_fileProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_size" />

    <LinearLayout
        android:id="@+id/dialog_buttons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_fileProgressBar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_buttonCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_buttonCancel"
            android:textSize="25sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/dialog_buttonHide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_buttonHide"
            android:textSize="25sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/dialog_buttonStart"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_buttonStart"
            android:textSize="25sp"
            android:textStyle="italic" />
    </LinearLayout>

</RelativeLayout>