<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50sp" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_action_previous_item" />

        <ImageView
            android:id="@+id/goForward"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_action_next_item" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <AutoCompleteTextView
                android:id="@+id/textUrl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="7dp"
                android:background="@color/white"
                android:hint="@string/textUrl"
                android:imeOptions="actionGo"
                android:inputType="textUri"
                android:paddingEnd="35dp"
                android:paddingLeft="10dp"
                android:paddingRight="35dp"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColorHint="@color/grey" />

            <ImageView
                android:id="@+id/goCancel"
                android:layout_width="40sp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/textGo"
                android:src="@drawable/ic_action_forward" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/addOrRemoveBookmark"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_action_not_important" />

        <ImageView
            android:id="@+id/addNewTab"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_action_new" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="-7dp"
        android:max="100"
        android:progress="0"
        android:visibility="gone" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/progressBar"
        android:isScrollContainer="false" />

    <GridView
        android:id="@+id/home_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/progressBar"
        android:isScrollContainer="false"
        android:numColumns="2"
        android:visibility="gone" />

</RelativeLayout>